# portal-5

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .mcp_dockerfile_hash  .pre-commit-config.yaml  ACCEPTANCE_EVIDENCE.md  ACCEPTANCE_RESULTS.md  ACCEPTANCE_RESULTS_COMFYUI.md  ACCEPTANCE_SUMMARY.md  ACCEPTANCE_TASK.md  ACCEPTANCE_V2_TASK.md  AGENTS_CAMPAIGN_SUPERVISOR.md  BASELINE_PREFILL_BENCH_REPORT_20260712T181356Z.md  CHANGELOG.md  CLAUDE.md  Dockerfile.attack  Dockerfile.dind  Dockerfile.mcp  Dockerfile.pipeline  Dockerfile.pwsh  EXECUTE_REVIEW_FIXES.md  FIX_COMFYUI_METRICS_TASK.md  GEMMA4_MLX_EVAL_REPORT_20260712.md  KNOWN_ISSUES.md  KNOWN_LIMITATIONS.md  LICENSE  Makefile.tests  OMLX_DECISION.md  P5_ACTION_PROMPT.md  P5_AUDIT_REPORT.md  P5_HOW_IT_WORKS.md  P5_ROADMAP.md  P5_VERIFICATION_LOG.md  PORTAL5_ACCEPTANCE_EXECUTE.md  PORTAL5_ACCEPTANCE_EXECUTE_v4.md  PORTAL5_ACCEPTANCE_TASK.md  PORTAL5_ACCEPTANCE_V4_EXECUTE.md  PORTAL5_BRANCH_CONSOLIDATION.md  PORTAL5_CODEBASE_REVIEW_AGENT_v1.md  (+60 more)
.claude/: PLAN.md
.github/workflows/: persona_matrix_nightly.yml  unit-tests.yml
.opencode/agent/: campaign-supervisor.md
coding_task/: DOCSTRINGS_V1_NOTES.md  PHASE4_PROMPT.md  TASK_LAGUNA_MLX_UPGRADE_V1.md  TASK_RAG_ENHANCE_V1.md  TASK_TRANSCRIBE_001_V2.md  TASK_UAT_PHASE4_POSTMERGE_FIXES.md
config/: .alias_retire_baseline.json  MODEL_CATALOG.md  UNUSED_MODELS_20260721.md  backends.yaml  challenge_classes.yaml  lab_targets.yaml  model_inventory.snapshot  modules.generated.yaml  portal.yaml  routing_descriptions.json  routing_examples.json  tool_catalog.yaml
config/chat_templates/: README.md  SHA256SUMS
config/cloudflared/: config.yml.example
config/huggingchat/: models.yaml
config/librechat/: librechat.yaml
config/personas/: adversarysimulator.yaml  agenticheavy.yaml  agenticlite.yaml  agentorchestrator.yaml  bench_apriel_nemotron.yaml  bench_devstral.yaml  bench_devstral_small_2.yaml  bench_dolphin8b.yaml  bench_foundation_sec.yaml  bench_gemma4_12b.yaml  bench_gemma4_26b_optiq.yaml  bench_gemma4_26b_qat.yaml  bench_gemma4_31b_qat.yaml  bench_gemma4_e2b.yaml  bench_gemma4_e4b.yaml  bench_gemma4_e4b_qat.yaml  bench_glm.yaml  bench_glm_reap.yaml  bench_glm_z1_rumination.yaml  bench_gptoss.yaml  bench_granite41_30b.yaml  bench_granite41_8b.yaml  bench_granite_speech.yaml  bench_harness1.yaml  bench_huihui_qwen36_27b.yaml  bench_huihui_qwen36_35b_a3b.yaml  bench_laguna.yaml  bench_lfm25_8b.yaml  bench_lfm25_8b_uncensored.yaml  bench_lfm2_moe.yaml  bench_llama33_70b.yaml  bench_llama4_scout.yaml  bench_mistral_small32.yaml  bench_nanonets_ocr2.yaml  bench_negentropy.yaml  bench_nemotron_omni.yaml  bench_nex_n2_mini.yaml  bench_olmo3_32b.yaml  bench_olmocr2.yaml  bench_omnicoder2.yaml  (+124 more)
config/personas_backup_20260401/: bugdiscoverycodeassistant.yaml  codereviewer.yaml  creativewriter.yaml  dataanalyst.yaml  devopsautomator.yaml  devopsengineer.yaml  excelsheet.yaml  fullstacksoftwaredeveloper.yaml  itexpert.yaml  javascriptconsole.yaml  kubernetesdockerrpglearningengine.yaml  pentester.yaml  (+8 more)
docs/: .doc_ledger.yaml  ADMIN_GUIDE.md  AGENT_LOOP.md  ALERTS.md  BACKUP_RESTORE.md  BENCH_CAPABILITY_V11_FINDINGS.md  CLUSTER_SCALE.md  COMFYUI_SETUP.md  COMPLIANCE_FALLBACK_POLICY.md  FISH_SPEECH_SETUP.md  HOWTO.md  LAB_REACHABILITY_DIAGNOSTIC_2026-06-30.md  LAB_SETUP.md  MCP_DEV_TOOLING.md  MLX_CHANGES_2026-04-26.md  MLX_KV_FLAG_PROBE.md  MTP_BENCH_20260528.md  PERFORMANCE.md  PERSONA_MATRIX_CI.md  PERSONA_PROMPT_AUDIT_V1.md  QWEN_TEMPLATE_PROBE.md  RESULTS_ALIAS_RETIRE_V1_20260713.md  RESULTS_COLLAPSE_V1_20260712.md  ROUTING_INTEGRITY_FINDINGS.md  SECURITY_BENCH_CHAIN_ANALYSIS.md  SECURITY_BENCH_EXEC.md  SECURITY_FLEET_REVIEW_2026-06.md  UAT_CALIBRATION.md  UAT_LIBRECHAT_DOM_NOTES.md  USER_GUIDE.md  V2_SCENARIO_AUDIT_V1.md  optimize-mac-server.sh
imports/: README.md
portal/: conftest.py
portal_channels/: TASK_FRONTIER_MODELS.md  __init__.py  dispatcher.py
portal_mcp/: __init__.py
portal_pipeline/: __init__.py  __main__.py  cli.py  cluster_backends.py  config.py  router_pipe.py  sync_config.py  tool_registry.py
portal_wiki/: EXTRACTION_NOTES.md  __init__.py  __main__.py  mcp.py  wiki_mcp.py
prompts/: nsfw-batch-01.txt
scripts/: alias_census.py  analyze_bench_v5.py  anythingllm_init.py  bench_supervisor.py  bench_v5_ladders.sh  blend_acceptance_results.py  cc-local.sh  cc-portal.sh  cc-stock.sh  check_docstrings.py  ci_local.sh  collapse_snapshot.py  convert_jang_keys.py  doc_ledger.py  download_comfyui_models.py  embedding-launchd-wrapper.sh  embedding-server.py  execute_preflight.py  gen-image.py  gen-video.py  huggingchat_init.py  lab_discover.py  lab_host.py  lab_provision_dc.ps1  lab_provision_dc_phase2.ps1  lab_provision_srv01.ps1  lab_ready.py  lab_setup.py  lab_targets.py  librechat_init.py  mcp-entrypoint.sh  migrate_to_portal_yaml.py  mlx-model-laguna.py  mlx-proxy.py  mlx-readiness.py  mlx-speech.py  mlx-switch-benchmark.py  mlx-tool-parser-laguna.py  mlx-transcribe.py  mlx-watchdog.py  (+24 more)
tests/: ACCEPTANCE_EVIDENCE.md  ACCEPTANCE_RESULTS_COMFYUI.md  ACCEPTANCE_RESULTS_V4_ARCHIVE.md  EXEC_SEC_FULL_COVERAGE_V1.md  PORTAL5_ACCEPTANCE_EXECUTE_V6.md  PORTAL5_ACCEPTANCE_EXECUTE_V7.md  PORTAL5_ACCEPTANCE_EXECUTE_V8.md  PORTAL5_ACCEPTANCE_EXECUTE_V9.md  PORTAL5_BENCH_EXECUTE_V1.md  PORTAL5_BENCH_EXECUTE_V2.md  PORTAL5_BENCH_EXECUTE_V3.md  PORTAL5_BENCH_EXECUTE_V4.md  PORTAL5_BENCH_SEC_EXECUTE_V1.md  PORTAL5_BENCH_SEC_EXECUTE_V2.md  PORTAL5_BENCH_SEC_EXECUTE_V3.md  PORTAL5_CANDIDATE_EVAL_V1.md  PORTAL5_PERSONA_MATRIX_EXECUTE_V1.md  PORTAL5_PROMPT_V6.md  PORTAL5_UAT_EXECUTE_V1.md  PORTAL5_UAT_EXECUTE_V2.md  PORTAL5_UAT_EXECUTE_V5.md  PORTAL5_UAT_LIBRECHAT_EXECUTE_V1.md  TASK_BENCH_EXECUTE_V7_UPDATE.md  TASK_PIPELINE_PERF_V1.md  UAT_CATALOG_TRIAGE_2026-06-26.md  UAT_DASHBOARD.md  UAT_KNOWN_ISSUES_2026-06-27.md  UAT_LIBRECHAT_RUN_LOG.md  UAT_RESULTS.md  UAT_RESULTS_LIBRECHAT.md  UAT_RUN_LOG.md  __init__.py  common.py  conftest.py  expected_models.py  inter_phase_gate.sh  load_test_concurrent.py  memory_guard.py  persona_matrix_diff.py  portal5_acceptance_comfyui.py  (+8 more)
(+1728 files in other folders)
