[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portal-5"
version = "6.0.7"
description = "Portal 6.0.7 — Open WebUI Enhancement Layer"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
channels = [
    "python-telegram-bot>=20.7",
    "slack-bolt>=1.18.0",
]
notifications = [
    "aiosmtplib>=3.0.0",
    "APScheduler>=3.10.0",
]
mcp = [
    "mcp>=1.0.0",          # MCP Python SDK (required by fastmcp)
    "fastmcp>=0.4.0",
    "requests>=2.31.0",
    # Document generation
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "markdown>=3.6",
    # Audio — TTS (kokoro primary, fish-speech optional)
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.1",
    "huggingface_hub>=0.20.0",
    # Audio — transcription
    "faster-whisper>=1.0.0",
    # HTTP for ComfyUI/video bridge
    "httpx>=0.26.0",
]
generation = [
    # MusicGen via HuggingFace transformers — works on aarch64/MPS/CUDA/CPU.
    # AudioCraft removed: torchtext/xformers have no aarch64 Linux wheels.
    # music_mcp runs natively on macOS (MPS) via ./launch.sh install-music.
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.40.0",
    "scipy>=1.11.0",
]
apple-silicon = [
    # MLX dual-server: mlx-lm for text-only models, mlx-vlm for VLM models.
    # mlx-lm>=0.31 required: qwen3_next moved to mlx_vlm in 0.31+; stay current for
    # new model architectures (Laguna SWA, Mamba2, etc.) and thread-local stream fixes.
    "mlx-lm>=0.31",
    "mlx-vlm>=0.1.0",
    # MLX Speech: unified TTS (Kokoro + Qwen3-TTS) + ASR (Qwen3-ASR) on Apple Silicon
    "mlx-audio>=0.3.0",
    # MLX Transcribe: diarized transcription on Apple Silicon (TASK-TRANSCRIBE-001)
    # mlx-whisper emits Whisper-format segments with timestamps (Metal-accelerated)
    # pyannote.audio runs on MPS via PyTorch; HF token required for gated models
    "mlx-whisper>=0.4.0",
    "pyannote.audio>=3.1.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    # Kokoro TTS phonemizer dependencies (required by mlx-audio Kokoro backend)
    "misaki>=0.1.0",
    "num2words>=0.5.0",
    "spacy>=3.5.0",
    "phonemizer>=3.2.0",
]
dev = [
    "mcp>=1.0.0",          # needed to run MCP endpoint tests
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
portal-pipeline = "portal_pipeline.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["portal_pipeline", "portal_channels", "portal_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# SIM115: context-manager-for-open — file handles in tests are cleaned up by process
"tests/**/*.py" = ["SIM115"]
# Acceptance/UAT scripts use uppercase section names (C0, C1…) as a deliberate design
# convention matching their CLI identifiers.  N802/N806/E741/F821/F841/SIM117 are
# pre-existing patterns in these standalone scripts.
"tests/portal5_acceptance_comfyui.py" = ["N802", "E741", "F821", "F841", "SIM115", "SIM117"]
"tests/portal5_acceptance_v6.py" = ["N802", "E741", "F821", "F841", "SIM115", "SIM117"]
"tests/portal5_uat_driver.py" = ["N802", "E741", "F821", "F841", "SIM115", "SIM117"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# -v: show each test name + PASSED/FAILED/ERROR as it runs (no dots)
# --tb=short: compact traceback on failures — enough to diagnose without wall of text
addopts = "-v --tb=short"
markers = [
    "browser: Playwright browser tests — require running frontends and 'playwright install chromium'",
    "timeout: Per-test timeout in seconds (decorative, enforced externally)",
]
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]
