[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portal-5"
version = "7.6.0"
description = "Portal 5 v7.6.0 — Open WebUI Enhancement Layer"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "prometheus-client>=0.19.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
channels = [
    "python-telegram-bot>=20.7",
    "slack-bolt>=1.18.0",
]
notifications = [
    "aiosmtplib>=3.0.0",
    "APScheduler>=3.10.0",
]
mcp = [
    "mcp>=1.9.0",          # MCP Python SDK — mcp.server.fastmcp replaces vendored copy (M4)
    "requests>=2.31.0",
    # Document generation
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "markdown>=3.6",
    # Audio — TTS (kokoro primary, fish-speech optional)
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.1",
    "huggingface_hub>=0.20.0",
    # Audio — transcription
    "faster-whisper>=1.0.0",
    # HTTP for ComfyUI/video bridge
    "httpx>=0.26.0",
]
generation = [
    # MusicGen via HuggingFace transformers — works on aarch64/MPS/CUDA/CPU.
    # AudioCraft removed: torchtext/xformers have no aarch64 Linux wheels.
    # music_mcp runs natively on macOS (MPS) via ./launch.sh install-music.
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.40.0",
    "scipy>=1.11.0",
]
rag = [
    # MLX-native embeddings + reranking (Qwen3-Embedding/Reranker family)
    # Replaces sentence-transformers CPU path for Apple Silicon.
    "mlx-embeddings>=0.0.3",
]
apple-silicon = [
    # MLX dual-server: mlx-lm for text-only models, mlx-vlm for VLM models.
    # mlx-lm>=0.31 required: qwen3_next moved to mlx_vlm in 0.31+; stay current for
    # new model architectures (Laguna SWA, Mamba2, etc.) and thread-local stream fixes.
    "mlx-lm>=0.31",
    "mlx-vlm>=0.1.0",
    # MLX Speech: unified TTS (Kokoro + Qwen3-TTS) + ASR (Qwen3-ASR) on Apple Silicon
    "mlx-audio>=0.3.0",
    # MLX Transcribe: diarized transcription on Apple Silicon (TASK-TRANSCRIBE-001)
    # mlx-whisper emits Whisper-format segments with timestamps (Metal-accelerated)
    # pyannote.audio runs on MPS via PyTorch; HF token required for gated models
    "mlx-whisper>=0.4.0",
    "pyannote.audio>=3.1.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    # Kokoro TTS phonemizer dependencies (required by mlx-audio Kokoro backend)
    "misaki>=0.1.0",
    "num2words>=0.5.0",
    "spacy>=3.5.0",
    "phonemizer>=3.2.0",
]
dev = [
    "mcp>=1.9.0",          # needed to run MCP endpoint tests (de-vendored in M4)
    "promptfoo>=0.1.4",    # PyPI wrapper around the promptfoo Node CLI (dev-only LLM quality evals)
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
portal-pipeline = "portal_pipeline.__main__:main"
portal = "portal_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["portal_pipeline", "portal_channels", "portal_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# SIM115: context-manager-for-open — file handles in tests are cleaned up by process
"tests/**/*.py" = ["SIM115"]
# Acceptance/UAT scripts use uppercase section names (C0, C1…) as a deliberate design
# convention matching their CLI identifiers.  N802/N806/E741/F821/F841/SIM117 are
# pre-existing patterns in these standalone scripts.
"tests/portal5_acceptance_comfyui.py" = ["N802", "E741", "F821", "F841", "SIM115", "SIM117"]
"tests/portal5_acceptance_v6.py" = ["N802", "N806", "E402", "E741", "F821", "F841", "SIM115", "SIM117"]
# acceptance package: carries same patterns as the monolith it replaces
"tests/acceptance/_common.py" = ["SIM117", "SIM105"]
"tests/acceptance/results.py" = ["SIM105"]
"tests/acceptance/runner.py" = ["N802"]
"tests/portal5_persona_matrix.py" = ["F401", "F841"]
"tests/benchmarks/bench_lab_exec.py" = ["SIM102"]
"tests/benchmarks/bench_mbptl.py" = ["SIM102"]
"tests/benchmarks/bench_router.py" = ["B905"]
"tests/benchmarks/bench_router_conditions.py" = ["SIM102"]
"tests/benchmarks/bench_security/__init__.py" = ["SIM102", "SIM105", "SIM117", "N806", "B023", "B007"]
"tests/benchmarks/coding_shootout_analyze.py" = ["B905", "B007"]
"tests/acceptance/**/*.py" = ["N806", "N802", "E741", "F841", "SIM105", "SIM115", "SIM117", "SIM118"]
"tests/unit/test_persona_matrix_diff.py" = ["N803"]
"tests/unit/test_document_mcp.py" = ["F401"]
"tests/unit/test_pipeline.py" = ["E402"]
"tests/unit/test_proxmox_mcp.py" = ["SIM117"]
"tests/acceptance/s04_documents.py" = ["B007"]
"tests/benchmarks/bench_security/rescore_run.py" = ["B007", "B905"]
# tests/uat inherits the UAT driver's pre-existing patterns (TASK_UAT_MODULARIZE_V1).
# F821 is deliberately NOT ignored here — undefined-name checking is the
# import-hygiene gate for the decomposition.
"tests/uat/**/*.py" = ["N802", "N806", "E741", "F841", "B905", "SIM105", "SIM115", "SIM117"]
"tests/uat_dashboard.py" = ["F841"]
# bench_security package: pre-existing patterns carried through refactor

"tests/benchmarks/bench_security/blue.py" = ["SIM117"]
"tests/benchmarks/bench_security/chain.py" = ["SIM117", "SIM105", "N806", "B023"]
"tests/benchmarks/bench_security/scoring.py" = ["SIM103", "SIM102"]
"tests/benchmarks/bench_security.py" = ["SIM117", "SIM105"]
# streaming.py: pre-existing patterns — SIM102 nested-if (deliberate guard),
# B905 zip strict= (Python 3.10 compat), N806 uppercase constants in function.
"portal_pipeline/router/streaming.py" = ["SIM102", "B905", "N806"]
"portal_pipeline/router_pipe.py" = ["N806", "SIM117"]
# scripts/ — standalone operator scripts, pre-existing patterns (not package code)
"scripts/**/*.py" = ["E402", "F841", "B007", "B904", "C408", "SIM105", "SIM102"]
# portal_mcp — FastMCP imports after logging setup (E402 is intentional guard ordering)
"portal_mcp/**/*.py" = ["E402", "SIM105"]
# deploy/ standalone scripts — same patterns as scripts/
"deploy/**/*.py" = ["E402", "F841", "B007", "SIM102", "SIM105", "SIM110", "SIM108"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# -v: show each test name + PASSED/FAILED/ERROR as it runs (no dots)
# --tb=short: compact traceback on failures — enough to diagnose without wall of text
addopts = "-v --tb=short"
markers = [
    "browser: Playwright browser tests — require running frontends and 'playwright install chromium'",
    "timeout: Per-test timeout in seconds (decorative, enforced externally)",
]
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]
